--- a/LiquorProject.ipynb
+++ b/LiquorProject.ipynb
@@ -25,11 +25,294 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "# import libraries\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Gross sales</th>\n",
+       "      <th>Discounts</th>\n",
+       "      <th>Refunds</th>\n",
+       "      <th>Net sales</th>\n",
+       "      <th>Non-revenue items</th>\n",
+       "      <th>Taxes</th>\n",
+       "      <th>Amount collected</th>\n",
+       "      <th>discount_rate</th>\n",
+       "      <th>weekday</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>3/1/24</td>\n",
+       "      <td>5415.29</td>\n",
+       "      <td>-21.57</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>5393.72</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>574.30</td>\n",
+       "      <td>5968.02</td>\n",
+       "      <td>0.003983</td>\n",
+       "      <td>Friday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>3/2/24</td>\n",
+       "      <td>4522.27</td>\n",
+       "      <td>-9.77</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4512.50</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>493.75</td>\n",
+       "      <td>5006.25</td>\n",
+       "      <td>0.002160</td>\n",
+       "      <td>Saturday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3/3/24</td>\n",
+       "      <td>2304.91</td>\n",
+       "      <td>-4.24</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2300.67</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>248.76</td>\n",
+       "      <td>2549.43</td>\n",
+       "      <td>0.001840</td>\n",
+       "      <td>Sunday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3/4/24</td>\n",
+       "      <td>2196.73</td>\n",
+       "      <td>-29.33</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2167.40</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>234.14</td>\n",
+       "      <td>2401.54</td>\n",
+       "      <td>0.013352</td>\n",
+       "      <td>Monday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>3/5/24</td>\n",
+       "      <td>2451.54</td>\n",
+       "      <td>-24.04</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2427.50</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>267.34</td>\n",
+       "      <td>2694.84</td>\n",
+       "      <td>0.009806</td>\n",
+       "      <td>Tuesday</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Date  Gross sales  Discounts  Refunds  Net sales  Non-revenue items  \\\n",
+       "0  3/1/24      5415.29     -21.57      0.0    5393.72                0.0   \n",
+       "1  3/2/24      4522.27      -9.77      0.0    4512.50                0.0   \n",
+       "2  3/3/24      2304.91      -4.24      0.0    2300.67                0.0   \n",
+       "3  3/4/24      2196.73     -29.33      0.0    2167.40                0.0   \n",
+       "4  3/5/24      2451.54     -24.04      0.0    2427.50                0.0   \n",
+       "\n",
+       "    Taxes  Amount collected  discount_rate   weekday  \n",
+       "0  574.30           5968.02       0.003983    Friday  \n",
+       "1  493.75           5006.25       0.002160  Saturday  \n",
+       "2  248.76           2549.43       0.001840    Sunday  \n",
+       "3  234.14           2401.54       0.013352    Monday  \n",
+       "4  267.34           2694.84       0.009806   Tuesday  "
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# load the data\n",
+    "file_path = 'LiquorStoreDataCleaned.csv'\n",
+    "liquor = pd.read_csv(file_path)\n",
+    "\n",
+    "liquor.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/qr/p2x8klsx3x55m_nl2qztdt6m0000gn/T/ipykernel_11256/2414431852.py:1: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
+      "  liquor['Date'] = pd.to_datetime(liquor['Date'])\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Gross sales</th>\n",
+       "      <th>Discounts</th>\n",
+       "      <th>Refunds</th>\n",
+       "      <th>Net sales</th>\n",
+       "      <th>Non-revenue items</th>\n",
+       "      <th>Taxes</th>\n",
+       "      <th>Amount collected</th>\n",
+       "      <th>discount_rate</th>\n",
+       "      <th>weekday</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2024-03-01</td>\n",
+       "      <td>5415.29</td>\n",
+       "      <td>-21.57</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>5393.72</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>574.30</td>\n",
+       "      <td>5968.02</td>\n",
+       "      <td>0.003983</td>\n",
+       "      <td>Friday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2024-03-02</td>\n",
+       "      <td>4522.27</td>\n",
+       "      <td>-9.77</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4512.50</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>493.75</td>\n",
+       "      <td>5006.25</td>\n",
+       "      <td>0.002160</td>\n",
+       "      <td>Saturday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2024-03-03</td>\n",
+       "      <td>2304.91</td>\n",
+       "      <td>-4.24</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2300.67</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>248.76</td>\n",
+       "      <td>2549.43</td>\n",
+       "      <td>0.001840</td>\n",
+       "      <td>Sunday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2024-03-04</td>\n",
+       "      <td>2196.73</td>\n",
+       "      <td>-29.33</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2167.40</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>234.14</td>\n",
+       "      <td>2401.54</td>\n",
+       "      <td>0.013352</td>\n",
+       "      <td>Monday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2024-03-05</td>\n",
+       "      <td>2451.54</td>\n",
+       "      <td>-24.04</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2427.50</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>267.34</td>\n",
+       "      <td>2694.84</td>\n",
+       "      <td>0.009806</td>\n",
+       "      <td>Tuesday</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Date  Gross sales  Discounts  Refunds  Net sales  Non-revenue items  \\\n",
+       "0 2024-03-01      5415.29     -21.57      0.0    5393.72                0.0   \n",
+       "1 2024-03-02      4522.27      -9.77      0.0    4512.50                0.0   \n",
+       "2 2024-03-03      2304.91      -4.24      0.0    2300.67                0.0   \n",
+       "3 2024-03-04      2196.73     -29.33      0.0    2167.40                0.0   \n",
+       "4 2024-03-05      2451.54     -24.04      0.0    2427.50                0.0   \n",
+       "\n",
+       "    Taxes  Amount collected  discount_rate   weekday  \n",
+       "0  574.30           5968.02       0.003983    Friday  \n",
+       "1  493.75           5006.25       0.002160  Saturday  \n",
+       "2  248.76           2549.43       0.001840    Sunday  \n",
+       "3  234.14           2401.54       0.013352    Monday  \n",
+       "4  267.34           2694.84       0.009806   Tuesday  "
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "liquor['Date'] = pd.to_datetime(liquor['Date'])\n",
+    "\n",
+    "liquor.head()"
    ]
   }
  ],
