Check with prof

--- a/LiquorProject.ipynb
+++ b/LiquorProject.ipynb
@@ -15,7 +15,7 @@
     "| ------------------------------ | --------- |\n",
     "| Topic / Question               | Do days with high discounts result in significantly higher net sales? (it determines if the store's promotion strategy is actually increasing revenue or just cutting profit margins for no benefit.) |\n",
     "| Hypothesis                     | Days with high discount rates will have a greater mean Net sales than regular-discount days. |\n",
-    "| Outcome / Metric / Test Statistic | Primary metric is Net sales. The t-stat will be the difference in means of Net sales between the \"Promo Day\" and \"Regular Day\" groups. |\n",
+    "| Outcome / Metric / Test Statistic | Primary metric is Net sales. The t-stat will be the difference in means of Net sales between the Promo Day and Regular Day groups. |\n",
     "| Units of Analysis              | A single day of sales. Each row in the dataset represents one day's sales totals. |\n",
     "| Data Source(s)                 | Private daily sales data pulled from POS (March 2024 - October 2025) from a single Minnesota liquor store located in Blaine MN. The data is in the `LiquorStoreDataCleaned.csv` file. |\n",
     "| Why this data works            | The dataset works because it is clean and contains the exact continuous variables needed: Net sales and discounts. It allows for us to compare (Promo Days vs. Regular Days). |\n",
@@ -463,7 +463,7 @@
     "\n",
     "print(f\"The 75th Percentile Threshold is: {threshold_75th:.4f}\")\n",
     "\n",
-    "# Create the 'is_promo_day' column (True/False)\n",
+    "# Create the 'is_promo_day' column (T/F)\n",
     "liquor['is_promo_day'] = liquor['discount_rate'] > threshold_75th\n",
     "\n",
     "\n",
@@ -505,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -533,7 +533,7 @@
     "\n",
     "# Add titles and labels\n",
     "plt.title('Net Sales on Regular vs. Promo Days')\n",
-    "plt.suptitle('') # Removes the extra title\n",
+    "plt.suptitle('') \n",
     "plt.xlabel('Is a Promo Day?')\n",
     "plt.ylabel('Net Sales ($)')\n",
     "plt.xticks([1, 2], ['False (Regular Day)', 'True (Promo Day)'])\n",
