permutation analysis working

--- a/LiquorProject.ipynb
+++ b/LiquorProject.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +166,7 @@
        "4  267.34           2694.84       0.009806   Tuesday  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,14 +181,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/qr/p2x8klsx3x55m_nl2qztdt6m0000gn/T/ipykernel_3955/3328414997.py:8: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
+      "/var/folders/qr/p2x8klsx3x55m_nl2qztdt6m0000gn/T/ipykernel_46272/3328414997.py:8: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
       "  liquor['Date'] = pd.to_datetime(liquor['Date'])\n"
      ]
     },
@@ -293,7 +293,7 @@
        "4   Tuesday  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -443,7 +443,7 @@
        "4   Tuesday       0.009806         False  "
       ]
      },
-     "execution_count": 29,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -479,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -505,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -555,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -671,7 +671,7 @@
        "4   Tuesday       0.009806         False  "
       ]
      },
-     "execution_count": 35,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -699,15 +699,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Observed Difference in Mean Sales: $-838.34\n",
-      "P-Value: 0.83980\n"
+      "Observed Difference in Mean Sales: $-838.34\n"
      ]
     }
    ],
@@ -743,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -801,11 +800,11 @@
     "\n",
     "This value is much higher than the standard significance level of alpha = 0.05.\n",
     "\n",
-    "What it means: There is an 83.98% chance that we would see a difference in mean sales of $838.34 (or more extreme) purely by random chance. In other words, the difference we observed is highly likely to be due to natural, random fluctuation in the daily sales.\n",
+    "What it means: There is an 83.98% chance that we would see a difference in mean sales of $838.34 (or more extreme) purely by random chance. In other words, the difference we observed is highly likely to be due to natural, random fluctuation in the daily sales\n",
     "\n",
     "Observed Difference in Mean Sales: $838.34\n",
     "\n",
-    "What it means: After controlling for the day of the week, the average daily net sales on Promo Days was actually $838.34 lower than the average daily Net sales on Regular Days.\n"
+    "What it means: After controlling for the day of the week, the average daily net sales on Promo Days was actually $838.34 lower than the average daily Net sales on Regular Days\n"
    ]
   }
  ],
