--- a/LiquorProject.ipynb
+++ b/LiquorProject.ipynb
@@ -927,6 +927,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Actionable Advice from the CI\n",
+    "\n",
+    "Forecasting: When planning for a future promotion day, the store manager should budget and staff for sales to be around $2,500.\n",
+    "\n",
+    "Inventory: The CI's narrow range (only about a $100 spread) indicates sales on promo days are highly stable. The manager doesn't need to worry about unpredictable massive spikes or crashes; they can set inventory levels for promotional days very precisely.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "| **Metric**                   | **Value**                          | **Business Meaning**                                                                 |\n",
+    "|------------------------------|------------------------------------|---------------------------------------------------------------------------------------|\n",
+    "| Original Median Net Sales    | **$2,498.13**                      | This is the most likely amount of sales the store makes on any given promotional day. |\n",
+    "| 95% Confidence Interval (CI) | **$2,450.33 – $2,551.67**          | The business can be 95% confident that the true typical (median) daily net sales on a promotional day falls within this range. |\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## EXTRA ANALYSIS (NOT FOR THE PROJECT)"
    ]
   },
