--- a/LiquorProject.ipynb
+++ b/LiquorProject.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +166,7 @@
        "4  267.34           2694.84       0.009806   Tuesday  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
        "4   Tuesday  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -443,7 +443,7 @@
        "4   Tuesday       0.009806         False  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -479,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -505,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -555,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -671,7 +671,7 @@
        "4   Tuesday       0.009806         False  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -699,14 +699,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Observed Difference in Mean Sales: $-838.34\n",
+      "Observed Difference in Mean Sales: $-838.34\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "P-Value: 0.83980\n"
      ]
     }
@@ -743,7 +749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -831,7 +837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -845,7 +851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -866,7 +872,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -895,7 +901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -954,7 +960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -983,7 +989,6 @@
     "# 1. Calculate the correlation coefficient (r)\n",
     "correlation_r = liquor['discount_rate'].corr(liquor['Net sales'])\n",
     "\n",
-    "print(\"--- Correlation Analysis ---\")\n",
     "print(f\"Correlation Coefficient (r) between Discount Rate and Net Sales: {correlation_r:.4f}\")\n",
     "\n",
     "# 2. Visualization: Scatter Plot\n",
@@ -1006,7 +1011,61 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The plot demonstrates that when the store offers a deeper discount (moving right on the X-axis), total daily sales tend to be slightly lower (moving down on the Y-axis). This proves that the promotions are cannibalizing profit margins without generating a corresponding increase in revenue, as the sales points are widely dispersed and not clustered around a strong positive trend. This confirms the conclusion from your stratified permutation test: the discount is not an effective driver of sales."
+    "The plot demonstrates that when the store offers a deeper discount (moving right on the X-axis), total daily sales tend to be slightly lower (moving down on the Y-axis). This proves that the promotions are cannibalizing profit margins without generating a corresponding increase in revenue, as the sales points are widely dispersed and not clustered around a strong positive trend. This confirms the conclusion from my stratified permutation test: the discount is not an effective driver of sales."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total Actual Net Sales: $1,934,111.84\n",
+      "Total Hypothetical Net Sales (If Discounts = $0): $1,948,511.23\n",
+      "--------------------------------------------------\n",
+      "Total Lost Revenue (Cost of Current Discount Strategy): $14,399.39\n",
+      "This represents an average loss of $23.68 per day.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# COUNTERFACTUAL SIMULATION: NO DISCOUNTS\n",
+    "\n",
+    "# only need data from valid sales days for this analysis.\n",
+    "\n",
+    "df_valid_sales = liquor.loc[liquor['Gross sales'] > 0].copy()\n",
+    "\n",
+    "# 1. calc Actual Total Net Sales\n",
+    "actual_total_net_sales = df_valid_sales['Net sales'].sum()\n",
+    "\n",
+    "# 2. calc Hypothetical Net Sales (Assuming 0 Discounts)\n",
+    "# HNS = Net Sales (Actual) - Discounts (Actual)\n",
+    "# Since Discounts is a negative number, ADD the absolute value:\n",
+    "df_valid_sales['Hypothetical Net Sales'] = df_valid_sales['Net sales'] + df_valid_sales['Discounts'].abs()\n",
+    "\n",
+    "# 3. calc Hypothetical Total Net Sales\n",
+    "hypothetical_total_net_sales = df_valid_sales['Hypothetical Net Sales'].sum()\n",
+    "\n",
+    "# 4. calc the Difference (The Cost of Discounting)\n",
+    "cost_of_discounts = hypothetical_total_net_sales - actual_total_net_sales\n",
+    "\n",
+    "# --- Print Results ---\n",
+    "\n",
+    "print(f\"Total Actual Net Sales: ${actual_total_net_sales:,.2f}\")\n",
+    "print(f\"Total Hypothetical Net Sales (If Discounts = $0): ${hypothetical_total_net_sales:,.2f}\")\n",
+    "print(\"-\" * 50)\n",
+    "print(f\"Total Lost Revenue (Cost of Current Discount Strategy): ${cost_of_discounts:,.2f}\")\n",
+    "print(f\"This represents an average loss of ${cost_of_discounts / len(df_valid_sales):,.2f} per day.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "current discount strategy costs the store an average of $23.68 per day and is not associated with a corresponding sales lift. The 14399.39 spent on discounts was a direct loss of revenue. This spending should be eliminated or reallocated to other strategies (like slow-day traffic driving) to immediately boost profitability"
    ]
   }
  ],
